Restructe the architecture of the project

--- a/docker/airflow/Dockerfile
+++ b/docker/airflow/Dockerfile
@@ -1,4 +1,7 @@
-FROM my-airflow:latest
+FROM apache/airflow:latest
+
+# Install Spark provider
+RUN pip install --no-cache-dir apache-airflow-providers-apache-spark
 
 USER root
 
@@ -10,6 +13,5 @@ RUN apt-get update && \
 # Set JAVA_HOME and update PATH
 ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
 ENV PATH="${JAVA_HOME}/bin:${PATH}"
-
 
 USER airflow
