--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - "8082:8080"
     volumes:
       - ./airflow/dags/jobs:/opt/airflow/dags/jobs
-
+    
   spark-worker:
     image: spark-iceberg:latest
     container_name: spark-worker
@@ -42,7 +42,7 @@ services:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - ./minio-data:/data
+      - ./minio/data:/data
 
   airflow:
     image: my-airflow-java:latest
@@ -60,55 +60,6 @@ services:
       - ./airflow/plugins:/opt/airflow/plugins
       - ./airflow/data:/opt/airflow/data
       - //var/run/docker.sock:/var/run/docker.sock
-  # airflow-init:
-  #   image: apache/airflow:latest
-  #   container_name: airflow-init
-  #   entrypoint: >
-  #     bash -c "airflow db migrate &&
-  #              airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com"
-  #   environment:
-  #     - AIRFLOW__CORE__EXECUTOR=LocalExecutor
-  #     - AIRFLOW__CORE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
-  #     - AIRFLOW__CORE__LOAD_EXAMPLES=False
-  #   volumes:
-  #     - ./airflow/dags:/opt/airflow/dags
-  #     - ./airflow/logs:/opt/airflow/logs
-  #     - ./airflow/plugins:/opt/airflow/plugins
-  #     - ./airflow/data:/opt/airflow/data
-
-  # airflow-webserver:
-  #   image: apache/airflow:latest
-  #   container_name: airflow-webserver
-  #   command: webserver
-  #   ports:
-  #     - "8085:8080"
-  #   environment:
-  #     - AIRFLOW__CORE__EXECUTOR=LocalExecutor
-  #     - AIRFLOW__CORE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
-  #     - AIRFLOW__CORE__LOAD_EXAMPLES=False
-  #   volumes:
-  #     - ./airflow/dags:/opt/airflow/dags
-  #     - ./airflow/logs:/opt/airflow/logs
-  #     - ./airflow/plugins:/opt/airflow/plugins
-  #     - ./airflow/data:/opt/airflow/data
-  #   depends_on:
-  #     - airflow-init
-
-  # airflow-scheduler:
-  #   image: apache/airflow:latest
-  #   container_name: airflow-scheduler
-  #   command: scheduler
-  #   environment:
-  #     - AIRFLOW__CORE__EXECUTOR=LocalExecutor
-  #     - AIRFLOW__CORE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
-  #     - AIRFLOW__CORE__LOAD_EXAMPLES=False
-  #   volumes:
-  #     - ./airflow/dags:/opt/airflow/dags
-  #     - ./airflow/logs:/opt/airflow/logs
-  #     - ./airflow/plugins:/opt/airflow/plugins
-  #     - ./airflow/data:/opt/airflow/data
-  #   depends_on:
-  #     - airflow-init
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
