--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   spark-master:
     image: spark-iceberg:latest
@@ -51,7 +49,7 @@ services:
     ports:
       - "8085:8080"
     env_file:
-      - ../../.env
+      - ./.env
     environment:
       - AIRFLOW__CORE__EXECUTOR=LocalExecutor
       - AIRFLOW__CORE__SQL_ALCHEMY_CONN=sqlite:////opt/airflow/airflow.db
