--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -105,7 +105,7 @@ services:
     ports:
       - "8086:8080"
     volumes:
-      - ./trino/etc:/etc/trino
+      - ./trino/etc/catalog:/etc/trino/catalog
     depends_on:
       - postgres
       - minio      
