make sure that the infra working good

--- a/docker/trino/etc/catalog/postgresql.properties
+++ b/docker/trino/etc/catalog/postgresql.properties
@@ -1,6 +1,6 @@
 connector.name=postgresql
 
 # JDBC connection details
-connection-url=jdbc:postgresql://postgres:5432/iceberg_catalog
+connection-url=jdbc:postgresql://postgres:5432/project_catalog
 connection-user=iceberg
 connection-password=iceberg
